[#98] 백업 필요성 판단 로직 개선 및 최신 백업 조회 방식 수정 (#112)
* fix: ImmutableList에서 sort 불가 오류 해결 (toList() -> collect(Collectors.toList()))

* fix: Backup 엔티티 endedAt nullable 수정
- @Column(name = "ended_at", nullable = false) 설정을 제거하여 백업 생성 시 endedAt이 null이어도 저장 가능하도록 수정

* feat: employeeRepository에 existsBy 추가 및 직원 존재 여부 기반 백업 필요성 판단 로직 수정

- 직원이 하나도 없을 경우 백업을 수행하지 않도록 수정
- employeeRepository에 직원 존재 여부를 확인하는 existsBy 메서드 추가
- 최초 백업 시에도 직원 데이터가 존재하는 경우에만 백업하도록 isBackupRequired 로직 수정

* refactor: findTopByStatusOrderByEndedAtDesc 수정 - 예외 발생 대신 null 반환

- 마지막 백업이 존재하지 않을 경우 RestException 대신 null 반환

* refactor: 들여쓰기 오류 수정