@@ -14,6 +14,7 @@ import com.hrbank.mapper.BackupMapper;
 import com.hrbank.repository.BackupRepository;
 import com.hrbank.repository.BinaryContentRepository;
 import com.hrbank.repository.EmployeeChangeLogRepository;
+import com.hrbank.repository.EmployeeRepository;
 import com.hrbank.service.BackupService;
 import com.hrbank.storage.BinaryContentStorage;
 import java.io.File;
@@ -27,6 +28,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -42,6 +44,7 @@ public class BasicBackupService implements BackupService {
   private final BackupRepository backupRepository;
   private final BackupMapper backupMapper;
   private final EmployeeChangeLogRepository employeeChangeLogRepository;
+  private final EmployeeRepository employeeRepository;
   private final BinaryContentRepository binaryContentRepository;
   private final BinaryContentStorage binaryContentStorage;
   private final EmployeeCsvGenerator employeeCsvGenerator;
@@ -57,7 +60,7 @@ public class BasicBackupService implements BackupService {
         .filter(backup -> status == null || backup.getStatus() == status)
         .filter(backup -> from == null || backup.getStartedAt().isAfter(from))
         .filter(backup -> to == null || backup.getStartedAt().isBefore(to))
-        .toList();
+        .collect(Collectors.toList());
 
     // 정렬 기준 설정
     Comparator<Backup> comparator = "endedAt".equalsIgnoreCase(sortField)
@@ -109,9 +112,7 @@ public class BasicBackupService implements BackupService {
   public BackupDto findLatestBackupByStatus(BackupStatus status) {
     return backupRepository.findTopByStatusOrderByEndedAtDesc(status)
         .map(backupMapper::toDto)
-        .orElseThrow(() ->
-            new RestException(ErrorCode.BACKUP_LATEST_NOT_FOUND)
-        );
+        .orElse(null);
   }
 
 
@@ -158,8 +159,14 @@ public class BasicBackupService implements BackupService {
   }
 
   private boolean isBackupRequired() {
+    // 직원이 없으면 백업할 필요 X
+    if(!employeeRepository.existsBy()){
+      return false;
+    }
+
     Optional<Backup> lastCompletedBackup = backupRepository.findTopByStatusOrderByEndedAtDesc(
         BackupStatus.COMPLETED);
+
     if(lastCompletedBackup.isEmpty()){
       return true;
     }
